Overflow fix

--- a/addon/styles/addon.less
+++ b/addon/styles/addon.less
@@ -4,6 +4,7 @@
 	margin-top: 1px;
 	border: solid 1px #dadada;
 	border-top: none;
+	overflow-x: hidden;
 
 	.autocomplete-suggestion {
 		font-family: "Helvetica Neue",Helvetica,Arial,sans-serif;
